@@ -9,6 +9,7 @@ import com.hl7client.model.enums.TipoMensaje;
 
 import javax.swing.table.AbstractTableModel;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -47,39 +48,55 @@ public class BenefitTableModel extends AbstractTableModel {
         if (rowIndex < 0 || rowIndex >= data.size()) return null;
         BenefitItem item = data.get(rowIndex);
 
-        return switch (columnIndex) {
-            case 0 -> getQuantityDisplay(item);
-            case 1 -> item.length();
-            case 2 -> getDescriptionDisplay(item);
-            case 3 -> getTypeDisplay(item);
-            default -> null;
-        };
+        switch (columnIndex) {
+            case 0:
+                return getQuantityDisplay(item);
+            case 1:
+                return item.length();
+            case 2:
+                return getDescriptionDisplay(item);
+            case 3:
+                return getTypeDisplay(item);
+            default:
+                return null;
+        }
     }
 
     @Override
     public Class<?> getColumnClass(int columnIndex) {
-        return switch (columnIndex) {
-            case 0, 1 -> Integer.class;
-            case 2, 3 -> String.class;
-            default -> Object.class;
-        };
+        switch (columnIndex) {
+            case 0:
+            case 1:
+                return Integer.class;
+            case 2:
+            case 3:
+                return String.class;
+            default:
+                return Object.class;
+        }
     }
 
     // =======================
     // Métodos de visualización
     // =======================
     private int getQuantityDisplay(BenefitItem item) {
-        if (item instanceof MedicalBenefitItem mbi) return mbi.getQuantityPerType();
-        if (item instanceof DentalBenefit) return 1;
+        if (item instanceof MedicalBenefitItem) {
+            return ((MedicalBenefitItem) item).getQuantityPerType();
+        }
+        if (item instanceof DentalBenefit) {
+            return 1;
+        }
         return 0;
     }
 
     private String getDescriptionDisplay(BenefitItem item) {
-        if (item instanceof MedicalBenefitItem mbi) {
+        if (item instanceof MedicalBenefitItem) {
+            MedicalBenefitItem mbi = (MedicalBenefitItem) item;
             return String.format("%d × %s", mbi.getQuantityPerType(), mbi.getBenefitCode());
         }
 
-        if (item instanceof DentalBenefit db) {
+        if (item instanceof DentalBenefit) {
+            DentalBenefit db = (DentalBenefit) item;
             String pieza = (db.getPiece() != null)
                     ? "Pieza " + db.getPiece().getFdiCode()
                     : "General (sin pieza)";
@@ -94,7 +111,7 @@ public class BenefitTableModel extends AbstractTableModel {
         }
 
         String value = item.getValue();
-        if (value == null || value.isBlank()) return "(sin valor)";
+        if (value == null || value.trim().isEmpty()) return "(sin valor)";
         return value.length() > 80 ? value.substring(0, 77) + "..." : value;
     }
 
@@ -113,7 +130,8 @@ public class BenefitTableModel extends AbstractTableModel {
 
         StringBuilder sb = new StringBuilder("<html><b>Detalle:</b><br>");
 
-        if (item instanceof DentalBenefit db) {
+        if (item instanceof DentalBenefit) {
+            DentalBenefit db = (DentalBenefit) item;
             String pieza = (db.getPiece() != null)
                     ? db.getPiece().getFdiCode() + " (" + db.getPiece().getType().name().toLowerCase() + ")"
                     : "Ninguna (prestación general)";
@@ -127,7 +145,8 @@ public class BenefitTableModel extends AbstractTableModel {
             sb.append("Pieza: ").append(pieza).append("<br>");
             sb.append("Caras: ").append(caras).append("<br>");
             sb.append("Código: ").append(db.getBenefitCode()).append("<br>");
-        } else if (item instanceof MedicalBenefitItem mbi) {
+        } else if (item instanceof MedicalBenefitItem) {
+            MedicalBenefitItem mbi = (MedicalBenefitItem) item;
             sb.append("Cantidad: ").append(mbi.getQuantityPerType()).append("<br>");
             sb.append("Código: ").append(mbi.getBenefitCode()).append("<br>");
         }
@@ -182,7 +201,7 @@ public class BenefitTableModel extends AbstractTableModel {
     }
 
     public List<BenefitItem> getAll() {
-        return List.copyOf(data);
+        return Collections.unmodifiableList(new ArrayList<>(data));  // ← Java 8: en lugar de copyOf
     }
 
     // =======================
@@ -205,7 +224,7 @@ public class BenefitTableModel extends AbstractTableModel {
     }
 
     public boolean hasDentalBenefit() {
-        return data.stream().anyMatch(DentalBenefit.class::isInstance);
+        return data.stream().anyMatch(b -> b instanceof DentalBenefit);
     }
 
     public boolean isEmpty() {
@@ -222,20 +241,26 @@ public class BenefitTableModel extends AbstractTableModel {
     // =======================
     private void inferTypeIfNeeded() {
         if (cachedType == null && !data.isEmpty()) {
-            cachedType = data.get(0) instanceof DentalBenefit
-                    ? TipoMensaje.ODONTOLOGIA
-                    : TipoMensaje.MEDICINA;
+            BenefitItem first = data.get(0);
+            if (first instanceof DentalBenefit) {
+                cachedType = TipoMensaje.ODONTOLOGIA;
+            } else {
+                cachedType = TipoMensaje.MEDICINA;
+            }
         }
     }
 
     private void sortData() {
         if (isDental()) {
             data.sort(Comparator.comparingInt(item -> {
-                if (item instanceof DentalBenefit db && db.getPiece() != null) {
-                    try {
-                        return Integer.parseInt(db.getPiece().getFdiCode());
-                    } catch (NumberFormatException e) {
-                        return 9999;
+                if (item instanceof DentalBenefit) {
+                    DentalBenefit db = (DentalBenefit) item;
+                    if (db.getPiece() != null) {
+                        try {
+                            return Integer.parseInt(db.getPiece().getFdiCode());
+                        } catch (NumberFormatException e) {
+                            return 9999;
+                        }
                     }
                 }
                 return item.getOrden();
